# src/models/Meal.js
@@ -6,7 +6,15 @@ const MealSchema = new mongoose.Schema(
       ar: { type: String, default: "" },
       en: { type: String, default: "" },
     },
+    description: {
+      ar: { type: String, default: "" },
+      en: { type: String, default: "" },
+    },
+    imageUrl: { type: String, default: "" },
     type: { type: String, enum: ["regular", "premium"], default: "regular" },
+    availableForOrder: { type: Boolean, default: true },
+    availableForSubscription: { type: Boolean, default: true },
+    sortOrder: { type: Number, default: 0 },
     isActive: { type: Boolean, default: true },
   },
   { timestamps: true }
